# my_feed

./: .gitignore  README.md  index  mypy.ini  requirements.txt  setup.cfg  setup.py
backend/: .env.example  .gitignore  Pipfile  README.md  build  config.go  db.go  feedtypes.json  go.mod  helpers.go  main.go  main.py  repl.py  serve
backend/app/: data_router.py  db.py  load_json.py  load_pickle.py  main.py  settings.py  token.py
backend/go_server/: .gitignore  build  go.mod  go.sum  main.go  serve
frontend/: .env.development  .env.production  .eslintrc.json  .gitignore  .prettierrc.js  README.md  next.config.js  package.json  run
frontend/components/: About.tsx  ErrorBoundary.tsx  FeedItem.tsx  Image.tsx  Layout.tsx
frontend/data/: feed_types.json
frontend/hooks/: useOnScreen.ts
frontend/lib/: enums.ts  prefs.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/styles/: Index.module.css  globals.css
my_media_feed/media_feed/: model.py  scrobbles.py
scripts/: feed-cli  feed_check  feed_live_update  functions.sh  python_index
server/: .env.example  .gitignore  Pipfile  app.py  config.py  repl.py  settings.py
server/app/: data_router.py  db.py  load_pickle.py  main.py  settings.py
src/my_feed/: __main__.py  blur.py  common.py  log.py  model.py  timeshift.py  transform.py
src/my_feed/server/: Pipfile
src/my_feed/sources/: __init__.pyi  albums.py  common.py  facebook_spotify_listens.py  games.py  index.py  listens.py  mal.py  model.py  mpv.py  nextalbums.py  offline_listens.py  scrobbles.py
tests/: test_feed.py
(+2 files in other folders)
