[metadata]
name = my_feed
version = 0.1.0
description = A personal feed/website
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/seanbreckenridge/my_feed"
author = Sean Breckenridge
author_email = "seanbrecke@gmail.com"
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
install_requires =
    arrow
    chess
    logzero
    mutagen
    url-cache
python_requires = >=3.8

[options.entry_points]
console_scripts =
    my_feed = my_feed.__main__:main

[mypy]
pretty = True
disallow_any_generics = False
show_error_context = True
show_error_codes = True
namespace_packages = True
disallow_subclassing_any = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
files = setup.py, src/my_feed, backend, tests
plugins = pydantic.mypy

[flake8]
ignore = E501,W503,E203

[tool:pytest]
testpaths = tests
addopts = -ra
